NierDance.theme.css
/* ... */
.theme-dark .ui-standard-sidebar-view{background-image: url(https://goo.gl/PYe8hB)!Important; background-size:cover !important;}

/* title bar */
.wordmark-2iDDfm,.winButton-iRh8-Z svg{display:none}
.titleBar-AC4pGV:before {position:absolute;content:"";height:15px;width:100vw;top:-3px;right:0;-webkit-app-region:drag}
.titleBar-AC4pGV{position:absolute;padding:9px;top:0;right:0;-webkit-app-region:no-drag}
.titleBar-AC4pGV .winButton-iRh8-Z{height:30px;width:30px;background:transparent center}
.titleBar-AC4pGV div:nth-of-type(2){background-image:url("https://cdn.discordapp.com/attachments/406778960484237322/406779041270464522/btn-close.svg")}
.titleBar-AC4pGV div:nth-of-type(3){background-image:url("https://cdn.discordapp.com/attachments/406778960484237322/406779041064943617/btn-maximize.svg")}
.titleBar-AC4pGV div:nth-of-type(4){background-image:url("https://cdn.discordapp.com/attachments/406778960484237322/406779041409138688/btn-minimize.svg")}
.title-3qD0b- .flex-1xMQg5.horizontal-1ae9ci,.titleCall-_b9o8P .flex-1xMQg5.horizontal-1ae9ci,.headerBar-UHpsPw .flex-1xMQg5.horizontal-1ae9ci{margin-right:98px}
.title-3qD0b- .flex-1xMQg5.horizontal-1ae9ci:after,.titleCall-_b9o8P .flex-1xMQg5.horizontal-1ae9ci:after,.headerBar-UHpsPw .flex-1xMQg5.horizontal-1ae9ci:after{background-color:hsla(0, 0%, 100%, 0.1);content:"";height:22px;width:1px}
.titleWrapper-1l0xT9{z-index:0}

/* scrollbar */
.theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-thumb, .theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-thumb {
    background-color: #1e2124;
    border-color: rgba(54, 57, 62, 0);}
::-webkit-scrollbar-track-piece {background-color: transparent !Important; border-color: Transparent!important}

/* Avatar and status */
.container-iksrDt .avatar-small,.container-iksrDt .status {border-radius: 0px}
.image-33JSyf, .status-oxiHuE {border-radius: 0px !important}
.avatar-large, .avatar-profile, .avatar-small, .avatar-xlarge, .avatar-xsmall, .avatar-xxlarge {
    background-clip: padding-box;
    background-color: none;
    background-position: 50%;
    border-radius: 0px
}
#app-mount .mask-3OgeRz{-webkit-mask:none;mask:none}

/* tooltips */
#app-mount .tooltip{background: rgb(65,64,56);color:rgb(212,205,186)}
.tooltip.tooltip-black.tooltip-top:after{border-top-color:rgb(65,64,56)}
.tooltip.tooltip-black.tooltip-right:after{border-right-color:rgb(65,64,56)}
.tooltip.tooltip-black.tooltip-bottom:after{border-bottom-color:rgb(65,64,56)}
.tooltip.tooltip-black.tooltip-left:after{border-left-color:rgb(65,64,56)}

/* popout shadow effect */
.popout-3sVMXz:not(.popouts-3dRSmE) {outline: 90vw solid hsla(180,3%,0%,.6)}

/* popout , menu & mic menu */
.theme-dark .menu-Sp6bN1{background:rgb(165,164,151)}
.theme-dark .item-1GzJrl{color:white}
.theme-dark .item-1GzJrl:hover{background:rgba(125,124,111,.9)}

.theme-dark.contextMenu-HLZMGh,.theme-dark .itemSubMenu-1vN_Yn{background:rgb(165,164,151)}
.theme-dark .item-1Yvehc:hover{background:rgba(125,124,111,.9)}

.theme-dark .themed-popout,.theme-dark .themed-popout .header{background:rgba(165,164,151,.85)!Important}

.theme-dark .modal-3HD5ck,.theme-dark .footer-2yfCgX{background-color:rgb(185,184,171)}
.theme-dark .content-8biNdB p, .theme-dark .content-8biNdB ul li{color:rgb(85,84,76)}

.small-popout-box{background:rgb(185,184,171);border-radius:0;border-color:rgb(85,84,76)}

.theme-dark .h5-18_1nd{color:rgb(85,84,76)}
.theme-dark .input-cIJ7To:focus{border-color:rgb(85,84,76)}
.lookFilled-1Gx00P.colorBrand-3pXr91{background-color: #8e1b35}

/* guild list */
.guildsWrapper-5TJh6A{width:62px;z-index: 3}
.guildsWrapper-5TJh6A .guilds-1q_RqH{background: rgba(0,0,0,.4);padding:10px 0 10px 6px}
.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ:hover{z-index:4}
.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ .guildInner-3DSoA4{border-radius:16px!important;transition:.2s}
.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ:hover .guildInner-3DSoA4{border-radius:10px!important;transition:.2s}
.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ.selected-ML3OIq:before{background: rgba(100,100,100,.8);width:50px;height:56px;left:0;top:-3px;margin:0;border-radius:8px;z-index:-1}
.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ.unread-qLkInr:before{background: rgba(255,255,255,.4);width:50px;height:56px;left:0;top:-3px;margin:0;border-radius:8px;z-index:-1}
.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ .badge-1GsMF2{width:50px;height:28px;left:0;top:25px;padding:0;border-radius:8px;text-align:center;line-height:40px;transition:.2s;z-index:-1;}
.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ:hover .badge-1GsMF2{padding-top:14px;transition:.2s}
.guildsWrapper-5TJh6A .guildsAdd-21_IdK{background: rgba(0,0,0,.2);border: 1px dashed #2ecc71;border-radius: 12px}
.guildsWrapper-5TJh6A .guildsAdd-21_IdK:hover{border-color:#22aa5a}
.guildsWrapper-5TJh6A .guildsAddInner-1KMFy- {background: url("https://i.imgur.com/1MfzLoF.png") no-repeat center/14px;color: transparent}
.guildsWrapper-5TJh6A .guilds-1q_RqH .homeIcon-1FoKUJ{background:transparent url("https://cdn.discordapp.com/attachments/390677094289637388/428920861937106945/friendiconfinal.png") no-repeat center/42px 40px}
.guildsWrapper-5TJh6A .guilds-1q_RqH .homeIcon-1FoKUJ g {display:none}
.guildsWrapper-5TJh6A .guilds-1q_RqH .homeIcon-1FoKUJ{background:transparent url("https://cdn.discordapp.com/attachments/390677094289637388/428920861937106945/friendiconfinal.png") no-repeat center/42px 40px}


/* channel */
#app-mount .guildsWrapper-5TJh6A:hover + div .channels-Ie2l6A, .app .channels-Ie2l6A:hover {left: 62px; opacity: 1}.container-iksrDt {background-color: rgba(20, 20, 20,1);margin-bottom:21px !Important}
.container-iksrDt {background-color: rgba(20, 20, 20,1);margin-bottom:21px !Important}
/* ... */

